# kotlin-std

./: .gitignore  LICENSE  build.gradle.kts  gradle.properties  run_tests.sh  settings.gradle.kts
.github/workflows/: publish.yml
gradle/: libs.versions.toml
kotlin-std/: .gitignore  build.gradle.kts
kotlin-std-gen/: build.gradle.kts
kotlin-std-gen/src/main/resources/templates/: PrimitiveList.txt  PrimitiveMap.txt  PrimitiveSet.txt
kotlin-std/src/androidMain/kotlin/com/cws/std/memory/: MemoryInfo.android.kt  NativeBuffer.android.kt  NativeLibrary.android.kt
kotlin-std/src/androidMain/kotlin/com/cws/std/storage/: Preferences.android.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/async/: ConcurrentRingBuffer.kt  JobsManager.kt  RingBuffer.kt  Task.kt  Thread.kt  ThreadPool.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/io/: File.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/math/: Conversions.kt  MathExt.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/memory/: Heap.kt  MemoryHandle.kt  MemoryInfo.kt  MemoryLayout.kt  NativeAnnotations.kt  NativeBuffer.kt  Stack.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/storage/: Preferences.kt
kotlin-std/src/commonMain/kotlin/com/cws/std/tracer/: FileProfiler.kt  LogProfiler.kt  Profiler.kt  TraceEvents.kt  Tracer.kt
kotlin-std/src/commonTest/kotlin/com/cws/std/math/: ClampTests.kt  CrossProductTests.kt  DotProductTests.kt  FractTests.kt  IntVectorTests.kt  LinearAlgebraTests.kt  MathTestUtils.kt  (+13 more)
kotlin-std/src/cpp/cmemory/: CMakeLists.txt  cmemory.cpp  cmemory.hpp
kotlin-std/src/cpp/cmemory/jni/: jni_cmemory.cpp
(+54 files in other folders)
